--- a/mvi/app/src/main/res/layout/home_fragment.xml
+++ b/mvi/app/src/main/res/layout/home_fragment.xml
@@ -27,11 +27,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_text" />
 
     <Button
-        android:id="@+id/btn_effect"
+        android:id="@+id/btn_toast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Effect"
+        android:text="Toast"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_button" />
