--- a/mvi/app/src/main/res/layout/home_fragment.xml
+++ b/mvi/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cl_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.HomeFragment">
+    tools:context=".home.presentation.HomeFragment">
 
     <TextView
         android:id="@+id/tv_text"
